<resources>
    <string name="app_name">RNG</string>
    <string name="main_dice_logo">Main Dice logo</string>
    <string name="lblTo_text">to</string>
    <string name="btnGo_text">Go!</string>
    <string name="lblResult_text">Result:</string>
    <string name="txtLow_hint">0</string>
    <string name="txtHigh_hint">10</string>
    <string name="resultError">Result: Error!</string>
    <string name="btnClipboard_text">Copy to Clipboard</string>
</resources>